new view for resrot

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,15 @@
   </head>
 
   <body>
-    <div class="ui secondary  menu">
-      <div class="ui container">
+    <div class="ui blue secondary  menu">
+      <div class="ui grey container">
         <a class="active item">
           Resorts
         </a>
-        <a class="item">
+        <a class="active item">
           Activities
         </a>
-        <a class="item">
+        <a class="active item">
           Reservations
         </a>
         <div class="right menu">
