--- a/app/views/resorts/show.html.erb
+++ b/app/views/resorts/show.html.erb
@@ -3,4 +3,4 @@
 <%= @resort.price_range %>
 <%= @resort.images %>
 <%= @resort.rating %>
-<%= link_to :Book, new_reservation_path%>
+<%= link_to :Book, new_reservation_path(:resort_id => @resort.id) %>
