--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,5 +1,4 @@
-<h2><%=@activity.name%>
-<%= form_for @activity do |f|%>
+<%= form_for(@activity) do |f|%>
 <%= f.label :name %>
 <%= f.text_field :name %><br>
 <%= f.label :duration %>
@@ -10,3 +9,7 @@
 <%= f.number_field :rating %><br>
 <%= f.submit %>
 <% end %>
+
+
+<%# TO DO: %>
+<%# Add "Create New Activity" header in correct formatting%>
