--- a/app/views/resort_activities/new.html.erb
+++ b/app/views/resort_activities/new.html.erb
@@ -1,4 +1,7 @@
 <h2><%=@resort_activity%>
 <%= form_for @resort_activity do |f|%>
-<%= f.submit %>
-<% end %>
+
+<%= f.submit 'Book Activity Reservation' %>
+<%end%>
+
+<%# TO DO: %>
