--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,10 +1,11 @@
 
 <ul>
 <div class="ui list">
+  <%=@user.name %>
  <% @reservations.each do |reservation| %>
     <div class="item">
-      <div class="header">User name</div>
-      <li> <%=reservation.user.name %>
+      <div class="header">Resort name</div>
+      <li> <%=reservation.resort.name %>
     </div>
     <div class="item">  
       <div class="header">Stay length</div>
