stephanie third update

--- a/app/views/resorts/index.html.erb
+++ b/app/views/resorts/index.html.erb
@@ -7,9 +7,9 @@
       <div class="content">
         <a class="header"><%= link_to resort.name, resort_path(resort) %></a>
         <div class="description">
-          <p><%= resort.city %></p>
-          <p><%= resort.price_range%></p>
-          <div class="ui blue label"><%= resort.rating %></div>
+          <p><i class="map marker icon"></i><%= resort.city %></p>
+          <p><i class="dollar sign icon"></i><%= resort.price_range%></p>
+          <div class="ui blue label"><i class="star icon"></i><%= resort.rating %></div>
         </div>
 
       </div>  
@@ -33,9 +33,9 @@
       <div class="content">
         <a class="header"><%= link_to resort.name, resort_path(resort) %></a>
         <div class="description">
-          <p><%= resort.city %></p>
-          <p><%= resort.price_range%></p>
-          <div class="ui blue label"><%= resort.rating %></div>
+          <p><i class="map marker icon"></i><%= resort.city %></p>
+          <p><i class="dollar sign icon"></i><%= resort.price_range%></p>
+          <div class="ui blue label"><i class="star icon"></i><%= resort.rating %></div>
         </div>
 
       </div>  
