--- a/app/views/resorts/show.html.erb
+++ b/app/views/resorts/show.html.erb
@@ -3,14 +3,17 @@
     <div class="item">
        
        <div class="content">
-        <h1><a class="header"><%= @resort.name %></a></h1>
+        
+        <h1 class="ui header">
+          <a class="header"><%= @resort.name %></a>
+          <div class="ui green label"><i class="star icon"></i><%= @resort.rating %></div>
+        </h1>
         <button class="ui primary button">
           Book
          <%= link_to :Book, new_reservation_path(:resort_id => @resort.id)%>
         </button>
-          <p><%= @resort.city %></p>
-          <p><%= @resort.price_range%></p>
-          <div class="ui green label"><%= @resort.rating %></div>
+          <p><i class="map marker icon"></i><%= @resort.city %></p>
+          <p><i class="dollar sign icon"></i><%= @resort.price_range%></p>
         </div>
         
           
