--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -17,5 +17,7 @@
 
 <%# TO DO: %>
 
-<%# Sort Activities by Ratings %>
+<%# Sort Activities by Ratings or Alphabetically? %>
+<%# If we add new activities, images won't show up?%>
 <%# Add "Activities" Header in correct formatting%>
+<%# Add "Create New Activity" link somewhere for owners%>
