--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,8 +1,26 @@
-<br><label>Activity Name: <%= @activity.name %></label><br>
-<br><label>Duration: <%= @activity.length %> hour(s)</label><br>
-<br><label>Price: $<%= @activity.price %>/per person</label><br>
-<br><label>Rating: <%= @activity.rating %>/5.0 stars</label><br>
-<br><%= link_to :Book, new_resort_activity_path(:activity_id => @activity.id) %>
+<div class="item">
+    <div class="content">
+        
+        <h1 class="ui header">
+          <a class="header"><%= @activity.name %></a>
+          <div class="ui green label"><i class="star icon"></i><%= @activity.rating %></div>
+        </h1>
+        <button class="ui primary basic button">
+         <%= link_to :Book, new_resort_activity_path(:activity_id => @activity.id)%>
+        </button>
+        <p></p>
+          <p><i class="clock icon"></i><%= @activity.length %> hour(s)</p>
+          <p><i class="dollar sign icon"></i><%= @activity.price%>/per person</p>
+          
+        <%= form_for @activity do |f| %>
+          <i class="building icon"></i><%= f.collection_select :resorts, Resort.all, :name, :name %>
+        <% end %>
 
+        </div>
+        <br>
+         <div><%= image_tag "#{@activity.id}.jpg" %></div>
+    </div>  
+</div>
 
 <%# TO DO: %>
+  
