--- a/app/views/resort_activities/new.html.erb
+++ b/app/views/resort_activities/new.html.erb
@@ -1,6 +1,7 @@
+<h2><%=@resort_activity.activity_id%>
 <%= form_for @resort_activity do |f|%>
 
-<%= f.submit 'Book Activity Reservation' %>
+<%= f.submit "Book Activity" %>
 <%end%>
 
 <%# TO DO: %>
