--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,3 +1,4 @@
+<h1 class="ui blue header">Activities</h1>
 <div class="ui items">
 
   <% @activities.each do |activity| %>
@@ -18,10 +19,3 @@
     </div>
   <% end %>
 </div>
-
-<%# TO DO: %>
-
-<%# Sort Activities by Ratings or Alphabetically? %>
-<%# If we add new activities, images won't show up?%>
-<%# Add "Activities" Header in correct formatting%>
-<%# Add "Create New Activity" link somewhere for owners%>
