--- a/app/views/resort_activities/new.html.erb
+++ b/app/views/resort_activities/new.html.erb
@@ -3,7 +3,7 @@
 at
 <%=@resort_activity.resort.name%> 
 for 
-<%=@resort_activity.user.reservations.length%> people.
+<%=@resort_activity.user.name%>
 Is this correct?</h2>
 
 <%= form_for @resort_activity do |f|%>
