--- a/app/views/resorts/index.html.erb
+++ b/app/views/resorts/index.html.erb
@@ -1,3 +1,6 @@
+<h1 class="ui blue header">Resorts</h1>
+<div class="ui items">
+
 <div class="ui items">
   <% @resorts.each do |resort| %>
     <div class="item">
