--- a/app/views/resorts/show.html.erb
+++ b/app/views/resorts/show.html.erb
@@ -1,6 +1,4 @@
-
-    
-    <div class="item">
+<div class="item">
        
        <div class="content">
         
@@ -8,10 +6,10 @@
           <a class="header"><%= @resort.name %></a>
           <div class="ui green label"><i class="star icon"></i><%= @resort.rating %></div>
         </h1>
-        <button class="ui primary button">
-          Book
+        <button class="ui primary basic button">
          <%= link_to :Book, new_reservation_path(:resort_id => @resort.id)%>
         </button>
+        <p></p>
           <p><i class="map marker icon"></i><%= @resort.city %></p>
           <p><i class="dollar sign icon"></i><%= @resort.price_range%></p>
         </div>
@@ -20,8 +18,22 @@
         <br>
         
          <div><%= image_tag "#{@resort.id}.png" %></div>
-        
 
-      </div>  
-    </div>
+      </div> 
+  
+          <a class="header">Activities</a>
+        <div class="ui bulleted list">
+        <div class="item">Spa Day</div>
+        <div class="item">Scuba Diving</div>
+        <div class="item">Zumba Class</div>
+        <div class="item">Salsa Dancing</div>
+        <div class="item">Cooking Class</div>
+        <div class="item">Wine Tasting</div>
+        <div class="item">Brewery Tour</div>
+        <div class="item">Horseback Riding</div>
+  </div>
+</div>
+</div>
+
+
   
