--- a/app/views/resort_activities/show.html.erb
+++ b/app/views/resort_activities/show.html.erb
@@ -1,1 +1,6 @@
-<%# TO DO: %>
+<h2> Book Completed </h2>
+<%=@resort_activity.user.name%><br>
+<%=@resort_activity.resort.name%><br>
+<%=@resort_activity.activity.name%><br>
+<%=@resort_activity.activity.length%><br>
+<%=@resort_activity.activity.price%><br>
