added activities paths

--- a/app/views/resorts/show.html.erb
+++ b/app/views/resorts/show.html.erb
@@ -20,14 +20,14 @@
 
         <a class="header">Activities</a>
         <div class="multi-column">
-        <div class="item"><%= link_to "Spa Day", activity_path(activity_url) %></div>
-        <div class="item"><%= link_to "Scuba Diving", activity_path(activity_url) %></div>
-        <div class="item">Zumba Class</div>
-        <div class="item">Salsa Dancing</div>
-        <div class="item">Cooking Class</div>
-        <div class="item">Wine Tasting</div>
-        <div class="item">Brewery Tour</div>
-        <div class="item">Horseback Riding</div>
+        <div class="item"><%= link_to "Spa Day", activity_path(1) %></div>
+        <div class="item"><%= link_to "Scuba Diving", activity_path(2) %></div>
+        <div class="item"><%= link_to "Zumba Class", activity_path(3) %></div>
+        <div class="item"><%= link_to "Salsa Dancing", activity_path(4) %></div>
+        <div class="item"><%= link_to "Cooking Class", activity_path(5) %></div>
+        <div class="item"><%= link_to "Wine Tasting", activity_path(6) %></div>
+        <div class="item"><%= link_to "Brewery Tour", activity_path(7) %></div>
+        <div class="item"><%= link_to "Horseback Riding", activity_path(8) %></div>
   </div>
 </div>
 </div>
