--- a/app/views/resorts/index.html.erb
+++ b/app/views/resorts/index.html.erb
@@ -6,6 +6,17 @@
   </button>
 </div>
 <% end %>
+<br>
+
+<%= form_tag(resorts_search_by_budget_path, method: "post") do %>
+  <div class="ui action input">
+    <%= text_field_tag(:id, nil, placeholder: "Search by budget") %>
+    <button class="ui icon button">
+      <i class="search icon"></i>
+    </button>
+  </div>
+  <% end %>
+
 
 <div class="ui items">
   <% @resorts.each do |resort| %>
@@ -26,29 +37,5 @@
   <% end %>
 </div>
 
-<%= form_tag("/resorts", method: "get") do %>
-  <%= label_tag(:id, "Search by budget:") %>
-  <%= text_field_tag(:id) %>
-  <%= submit_tag("Search") %>
-<% end %>
-
-<div class="ui items">
-  <% @resorts_by_budget.each do |resort| %>
-    <div class="item">
-      <div class="image">
-          <%= image_tag "#{resort.id}.png" %>
-      </div>
-      <div class="content">
-        <a class="header"><%= link_to resort.name, resort_path(resort) %></a>
-        <div class="description">
-          <p><i class="map marker icon"></i><%= resort.city %></p>
-          <p><i class="dollar sign icon"></i><%= resort.price_range%></p>
-          <div class="ui blue label"><i class="star icon"></i><%= resort.rating %></div>
-        </div>
-
-      </div>  
-    </div>
-  <% end %>
-</div>
 
 
