--- a/app/views/resort_activities/show.html.erb
+++ b/app/views/resort_activities/show.html.erb
@@ -1,6 +1,4 @@
-<h2> Book Completed </h2>
-<%=@resort_activity.user.name%><br>
-<%=@resort_activity.resort.name%><br>
-<%=@resort_activity.activity.name%><br>
-<%=@resort_activity.activity.length%><br>
-<%=@resort_activity.activity.price%><br>
+You are booked for <%=@resort_activity.activity.name%> at <%=@resort_activity.resort.name%>!<br>
+<br><p><i class="clock icon"></i><%=@resort_activity.activity.length%> hour(s)</p>
+<p><i class="dollar sign icon"></i><%= @resort_activity.activity.price%>/per person</p>
+<%= button_to "Cancel booking" , @resort_activity, method: :delete %>
