--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -14,6 +14,6 @@
         <% end %>
         
         <br>
-        <div><%= image_tag "#{@activity.id}.jpg" %></div>
+        <div><%= image_tag "#{@activity.id}.jpg", width: "500" %></div>
     </div>  
 </div>
