--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,23 +1,50 @@
-<h1 class="ui blue header">Reservations</h1>
+<h1 class="ui blue header">Resorts</h1>
 <div class="ui items">
 
 <ul>
 <div class="ui list">
-  <%=@user.name %>
  <% @reservations.each do |reservation| %>
     <div class="item">
-      <div class="header">Resort name:</div>
+      <div class="header">Resort name:</div><br>
       <li> <%=link_to reservation.resort.name, reservation_path(reservation) %>
     </div>
     <div class="item">  
-      <div class="header">Stay length:</div>
+      <br><div class="header">Stay length:</div><br>
       <%=reservation.length%> days
     </div>
     <div class="item">
-      <div class="header">Party size:</div>
+      <br><div class="header">Party size:</div><br>
       <%=reservation.party_size %></li> people <br>
     </div>
    <% end %>
-</div>
+   </div>
 </ul>
+
+
+<h1 class="ui blue header">Activities</h1>
+<div class="ui items">
+
+<ul>
+<div class="ui list">
+ <% @resort_activities.each do |activity| %>
+    <div class="item">
+      <div class="header">Resort: </div><br>
+      <%= activity.resort.name %><br>
+    </div>
+    <div class="item"><br>
+      <div class="header">Activity: </div><br>
+      <%= activity.activity.name %><br>
+    </div>
+    <div class="item">
+      <br><p><i class="clock icon"></i><%=activity.activity.length%> hour(s)</p>
+    <div class="item">
+      <p><i class="dollar sign icon"></i><%= activity.activity.price%>/per person</p>
+    <br></div>
+   <% end %>
+   </div>
+</ul>
+
+
+
+
 
