--- a/app/views/resort_activities/index.html.erb
+++ b/app/views/resort_activities/index.html.erb
@@ -1,7 +1,22 @@
-<%= @user.name %><br>
-<% @resort_activities.each do |activity| %>
-<%= activity.resort.name %><br>
-<%= activity.activity.name %><br>
-<%= activity.activity.length %><br>
-<%= activity.activity.price %><br>
-<% end %>
+<h1 class="ui blue header">Booked Activities</h1>
+<div class="ui items">
+
+<ul>
+<div class="ui list">
+ <% @resort_activities.each do |activity| %>
+    <div class="item">
+      <div class="header">Resort: </div><br>
+      <%= activity.resort.name %><br>
+    </div>
+    <div class="item"><br>
+      <div class="header">Activity: </div><br>
+      <%= activity.activity.name %><br>
+    </div>
+    <div class="item">
+      <br><p><i class="clock icon"></i><%=activity.activity.length%> hour(s)</p>
+    <div class="item">
+      <p><i class="dollar sign icon"></i><%= activity.activity.price%>/per person</p>
+    <br></div>
+   <% end %>
+   </div>
+</ul>
