--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,23 +1,22 @@
 <h1 class="ui blue header">Reservations</h1>
 <div class="ui items">
 
-<ul>
-<div class="ui list">
-  <%=@user.name %>
- <% @reservations.each do |reservation| %>
+ <div class="ui list">
+  <div class="item">
+   <h3><i class="user icon"></i></i><%=@user.name %></h3>
+  </div><br>
+   <% @reservations.each do |reservation| %>
     <div class="item">
-      <div class="header">Resort name:</div>
-      <li> <%=link_to reservation.resort.name, reservation_path(reservation) %>
+      <div class="header">Resort name:
+      <%=link_to reservation.resort.name, reservation_path(reservation) %></div>
     </div>
     <div class="item">  
-      <div class="header">Stay length:</div>
-      <%=reservation.length%> days
+      <div class="header">Stay length: <%=reservation.length%> days </div>
     </div>
     <div class="item">
-      <div class="header">Party size:</div>
-      <%=reservation.party_size %></li> people <br>
+      <div class="header">Party size: <%=reservation.party_size %> people </div><br>
     </div>
    <% end %>
 </div>
-</ul>
+
 
