--- a/app/views/resorts/show.html.erb
+++ b/app/views/resorts/show.html.erb
@@ -1,34 +1,88 @@
-<div class="item" >
-       
-       <div class="content">
-        
-        <h1 class="ui header">
-          <a class="header"><%= @resort.name %></a>
-          <div class="ui green label"><i class="star icon"></i><%= @resort.rating %></div>
-        </h1>
-          <%= link_to :Book, new_reservation_path(:resort_id => @resort.id), class: "ui primary button"%>
-          <p><i class="map marker icon"></i><%= @resort.city %></p>
-          <p><i class="dollar sign icon"></i><%= @resort.price_range%></p>
-        </div>
-        
-          
-        <br>
-        
-         <div><%= image_tag "#{@resort.id}.png" %></div>
+<div class="ui segment">
+  <div class="middle aligned content">
+    <h1 class="ui header">
+      <a class="header"><%= @resort.name %></a>
+    </h1>
+    <div class="ui grid">
+      <div class="eight wide column">
+        <div class="ui medium image">
+          <%= image_tag "#{@resort.id}.png", class:"ui middle aligned image"%>
+    </div>
 
-      </div> 
+      </div>
+      <div class="six wide column">
+<p></p>
+    <div class="row">
+      <i class="map marker icon"></i><%= @resort.city %>
+    </div>
+<p></p>
 
-        <a class="header">Activities</a>
-        <div class="multi-column">
-        <div class="item"><%= link_to "Spa Day", activity_path(1) %></div>
-        <div class="item"><%= link_to "Scuba Diving", activity_path(2) %></div>
-        <div class="item"><%= link_to "Zumba Class", activity_path(3) %></div>
-        <div class="item"><%= link_to "Salsa Dancing", activity_path(4) %></div>
-        <div class="item"><%= link_to "Cooking Class", activity_path(5) %></div>
-        <div class="item"><%= link_to "Wine Tasting", activity_path(6) %></div>
-        <div class="item"><%= link_to "Brewery Tour", activity_path(7) %></div>
-        <div class="item"><%= link_to "Horseback Riding", activity_path(8) %></div>
+    <div class="row">
+      <i class="dollar sign icon"></i><%= @resort.price_range%>
+    </div>
+<p></p>
+
+    <div class="row">
+      <div class="ui green label"><i class="star icon"></i><%= @resort.rating %></div>
+    </div>
+
+      </div>
+    </div>
+    <p></p>
+    <div><%= link_to :Book, new_reservation_path(:resort_id => @resort.id), class: "ui primary button"%></div>
+
+  </div>
+
+
+  <h4 class="ui header">Activities</h4>
+  <div class="ui list">
+    <div class="item">
+      <i class="map marker icon"></i>
+      <div class="content"><%= link_to "Spa Day", activity_path(1), class: "header" %>
+        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+      </div>
+    </div>
+    <div class="item">
+      <i class="map marker icon"></i>
+      <div class="content"><%= link_to "Scuba Diving", activity_path(2), class: "header" %>
+        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+      </div>
+    </div>
+    <div class="item">
+      <i class="map marker icon"></i>
+      <div class="content"><%= link_to "Zumba Class", activity_path(3), class: "header" %>
+        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+      </div>
+    </div>
+    <div class="item">
+      <i class="map marker icon"></i>
+      <div class="content"><%= link_to "Salsa Dancing", activity_path(4), class: "header" %>
+        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+      </div>
+    </div>
+    <div class="item">
+      <i class="map marker icon"></i>
+      <div class="content"><%= link_to "Cooking Class", activity_path(5), class: "header" %>
+        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+      </div>
+    </div>
+    <div class="item">
+      <i class="map marker icon"></i>
+      <div class="content"><%= link_to "Wine Tasting", activity_path(6), class: "header" %>
+        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+      </div>
+    </div>
+    <div class="item">
+      <i class="map marker icon"></i>
+      <div class="content"><%= link_to "Brewery Tour", activity_path(7), class: "header" %>
+        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+      </div>
+    </div>
+    <div class="item">
+      <i class="map marker icon"></i>
+      <div class="content"><%= link_to "Horseback Riding", activity_path(8), class: "header" %>
+        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+      </div>
+    </div>
   </div>
 </div>
-</div>
-
