--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,40 @@
-<%= flash[:message] %>
-<%= form_for @user do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %><br>
-  <%= f.select :budget, list_all_budgets %>
-  <%= f.label :password %>
-  <%= f.password_field :password %><br>
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %><br>
-  <%= f.submit %>
+
+<div class="ui middle aligned center aligned grid">
+<div class="column" style="max-width: 450px; margin-top:20px;">
+<%= form_for(@user, html: {class: "ui form"}) do |f|  %>
+  <div class="ui stacked segment">
+    <div class="field">
+      <div class="ui left icon input">
+        <i class="user icon"></i>
+        <%= f.text_field :name, placeholder: "User name" %>
+      </div>
+    </div>
+    <div class="field">
+      <div class="ui left icon input">
+        <i class="dollar sign icon"></i>
+
+        <%= f.select :budget, list_all_budgets, {}, {class: "ui selection dropdown"}  %>
+      </div>
+    </div>
+    
+
+    <div class="field">
+      <div class="ui left icon input">
+        <i class="lock icon"></i>
+        <%= f.password_field :password, placeholder: "Password" %>
+      </div>
+    </div>
+    <div class="field">
+      <div class="ui left icon input">
+        <i class="lock icon"></i>
+        <%= f.password_field :password_confirmation, placeholder: "password_confirmation" %>
+      </div>
+    </div>
+    <%= f.submit "Sign up", class:"ui fluid large blue submit button"%>
+  </div>
 <% end %>
+<% if flash[:message] %>
+<div class="ui error message"><%= flash[:message]%> </div>
+<% end %>
+</div>
+</div>
