--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -24,25 +24,24 @@
 <h1 class="ui blue header">Activities</h1>
 <div class="ui items">
 
-<ul>
+
 <div class="ui list">
  <% @resort_activities.each do |activity| %>
     <div class="item">
-      <div class="header">Resort: </div><br>
-      <%= activity.resort.name %><br>
+      <div class="header">Resort:  <%= activity.resort.name %><br></div>
     </div>
     <div class="item"><br>
-      <div class="header">Activity: </div><br>
-      <%= activity.activity.name %><br>
+      <div class="header">Activity: 
+      <%= activity.activity.name %></div><br>
     </div>
     <div class="item">
-      <br><p><i class="clock icon"></i><%=activity.activity.length%> hour(s)</p>
+      <p><i class="clock icon"></i><%=activity.activity.length%> hour(s)</p>
     <div class="item">
       <p><i class="dollar sign icon"></i><%= activity.activity.price%>/per person</p>
     <br></div>
    <% end %>
    </div>
-</ul>
+
 
 
 
