KL activity description

--- a/app/views/resorts/show.html.erb
+++ b/app/views/resorts/show.html.erb
@@ -39,49 +39,49 @@
     <div class="item">
       <i class="map marker icon"></i>
       <div class="content"><%= link_to "Spa Day", activity_path(1), class: "header" %>
-        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+        <div class="description">Come enjoy a relaxing afternoon at the world-renowned Glacier Spa.</div>
       </div>
     </div>
     <div class="item">
       <i class="map marker icon"></i>
       <div class="content"><%= link_to "Scuba Diving", activity_path(2), class: "header" %>
-        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+        <div class="description">Take a dive! Come see some of the most exquisite coral reefs and tropical fish.</div>
       </div>
     </div>
     <div class="item">
       <i class="map marker icon"></i>
       <div class="content"><%= link_to "Zumba Class", activity_path(3), class: "header" %>
-        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+        <div class="description">Get your sweat on with this upbeat, fun Zumba class.</div>
       </div>
     </div>
     <div class="item">
       <i class="map marker icon"></i>
       <div class="content"><%= link_to "Salsa Dancing", activity_path(4), class: "header" %>
-        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+        <div class="description">Put on those dancing shoes!</div>
       </div>
     </div>
     <div class="item">
       <i class="map marker icon"></i>
       <div class="content"><%= link_to "Cooking Class", activity_path(5), class: "header" %>
-        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+        <div class="description">Led by our world-renowned chefs, come learn to cook from the masters.</div>
       </div>
     </div>
     <div class="item">
       <i class="map marker icon"></i>
       <div class="content"><%= link_to "Wine Tasting", activity_path(6), class: "header" %>
-        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+        <div class="description">Voted as one of the best wineries in the country, come enjoy a day of wine tasting wth friends!</div>
       </div>
     </div>
     <div class="item">
       <i class="map marker icon"></i>
       <div class="content"><%= link_to "Brewery Tour", activity_path(7), class: "header" %>
-        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+        <div class="description">Guaranteed to be a good time!</div>
       </div>
     </div>
     <div class="item">
       <i class="map marker icon"></i>
       <div class="content"><%= link_to "Horseback Riding", activity_path(8), class: "header" %>
-        <div class="description">Greenpoint's best choice for quick and delicious sushi.</div>
+        <div class="description">Take a whimisical ride on horseback through the forests.</div>
       </div>
     </div>
   </div>
